# ganymede

./: CMakeLists.txt  README.md  main.cpp
scripts/: buildRun.sh  windowsBuild.sh
src/: gamestate.cpp  gamestate.h  window.cpp  window.h
